--- a/sites/lust/components/layout/index.module.scss
+++ b/sites/lust/components/layout/index.module.scss
@@ -1,22 +1,15 @@
 .layout {
   position: relative;
   display: flex;
+  flex-direction: column;
   flex: 1;
-  background: linear-gradient(
-    to right,
-    #0f2027,
-    #192e35,
-    #1d3641
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: white;
+  background: #1c1c25;
 }
-.header {
-}
+
 .content {
   flex: 1;
   display: flex;
   flex-direction: column;
-  max-width: 87.5rem;
 }
 
 .footer {
