--- a/sites/lust/pages/index.module.scss
+++ b/sites/lust/pages/index.module.scss
@@ -53,7 +53,7 @@
 }
 .section {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -76,6 +76,25 @@
       left: 50%;
       height: 80%;
       transform: translate(-50%, -50%);
+    }
+  }
+  .sectionHeader {
+    font-size: 2rem;
+    font-weight: 600;
+  }
+  .achievements {
+    height: 100%;
+    padding: 2rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .imgWrapper {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
