--- a/sites/lust/pages/index.module.scss
+++ b/sites/lust/pages/index.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 .landingpage {
   display: flex;
   flex: 1;
@@ -24,7 +25,7 @@
   }
 }
 .slogan {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 .nav {
   position: fixed;
@@ -33,21 +34,54 @@
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
-  padding: 0.5rem;
-  background: #3c3c45;
-  border-radius: 0 10px 10px 0;
-  transition: all 0.2s;
   z-index: 10;
-  .item {
-    height: 2.5rem;
-    filter: grayscale(100%);
-    &.active {
-      filter: grayscale(0%);
-    }
+
+  a:not(:last-child) {
+    margin-bottom: 0.5rem;
   }
   .item {
+    position: relative;
+    display: flex;
+    padding: 0 0.5rem;
+
+    .icon {
+      font-size: 2rem;
+      margin: 0.25rem 0;
+      &.active {
+        fill: #fcbf00;
+      }
+    }
+
+    .label {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: start;
+      background: #4c4c55;
+      padding: 0.5rem 0.5rem 0.5rem 3rem;
+      border-radius: 0 0.625rem 0.625rem 0;
+      z-index: -1;
+      transform: translateX(calc(-100% + 2.5rem));
+      text-decoration: none;
+      transition: transform 0.2s;
+      > span {
+        transition: opacity 0.15s;
+        opacity: 0;
+        font-weight: 600;
+      }
+    }
     &:hover {
-      filter: grayscale(25%);
+      .icon {
+        fill: color.adjust(#fcbf00, $lightness: 30%);
+      }
+      .label {
+        transform: translateX(-0.5rem);
+
+        > span {
+          opacity: 1;
+          transition: opacity 0.15s 0.15s;
+        }
+      }
     }
   }
 }
